tests/fixtures/invalid/pow_int_float_bytes.py
# Cannot call pow() with Int, Float, Bytes
x = pow(1, 1.0, b"hello")
